# django-app

./: .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/database/: db.sqlite3
mysite/mysite/: settings.py
mysite/shopapp/: forms.py
mysite/shopapp/templates/shopapp/: shop-index.html
