[project]
name = "prod"
version = "0.1.0"
description = ""
authors = [
    {name = "igor",email = "igor70@yandex.ru"}
]

requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
